--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -7,13 +7,46 @@
   {% comment %}
     Get first variant, or deep linked one
   {% endcomment %}
-  {%- assign current_variant = product.selected_or_first_available_variant -%}
+  
+  {% if product.variants.size > 1 %}
+	{% assign current_variant = product.selected %}
+  {% else %}
+    {% assign current_variant = product.first_available_variant %}
+  {% endif %}
   {%- assign product_image_zoom_size = '1024x1024' -%}
   {%- assign product_image_scale = '2' -%}
   {%- assign enable_zoom = section.settings.enable_zoom -%}
   {%- assign compare_at_price = current_variant.compare_at_price -%}
   {%- assign price = current_variant.price -%}
-
+  
+  {%- comment -%} START: description location & custom form details {%- endcomment -%}
+  {%- comment -%} TODO: this can be controlled by metafields as well {%- endcomment -%}
+  {%- assign product_template = product.template_suffix -%}
+  {% case product_template %}
+  	{% when 'ornament' %}
+  		{%- assign display_left = true %}
+  	{% when 'personalized-pairs' %}
+  		{%- assign display_left = true %}
+  	{% else %}
+  		{%- assign display_left = false %}
+  {% endcase %}
+  
+  {% case product_template %}
+  	{% when 'ornament' %}
+  		{%- if product.metafields.ornament.field-snippet == blank -%}
+  			{%- assign form_snippet = 'ornament-fields' -%}
+  		{%- else -%}
+  			{%- assign form_snippet = product.metafields.ornament.field-snippet -%}
+  		{%- endif -%}
+  	{% when 'personalized-pairs' %}
+  		{%- assign form_snippet = product.metafields.personalized-pairs.field-snippet -%}
+ 	{% when 'ornament-pairs' --%}
+  		{%- assign form_snippet = 'ornament-pairs-fields' -%}
+ 	{% when 'ornament-family' %}
+  		{%- assign form_snippet = 'ornament-family-fields' -%}
+  {% endcase %}
+  {% comment %} END {% endcomment %}
+  
   {% case section.settings.image_size %}
     {% when 'small' %}
       {%- assign product_image_width = 'medium-up--one-third' -%}
@@ -40,7 +73,7 @@
 
   <div class="grid product-single{% if section.settings.enable_payment_button %} product-single--{{ section.settings.image_size }}-image{% endif %}">
     <div class="grid__item product-single__photos {{ product_image_width }}{% if section.settings.image_size == 'full' %} product-single__photos--full{% endif %}">
-      {%- assign featured_image = product.selected_or_first_available_variant.featured_image | default: product.featured_image -%}
+      {%- assign featured_image = current_variant.featured_image | default: product.featured_image -%}
       {% for image in product.images %}
         {% capture img_id %}FeaturedImage-{{ section.id }}-{{ image.id }}{% endcapture %}
         {% capture img_class %}product-featured-img{% endcapture %}
@@ -107,8 +140,14 @@
           {% endif %}
         </div>
       {% endif %}
+      
+      {% comment %} START: display description in left side under images {% endcomment %}
+      {%- if display_left == true -%}
+      	{% include 'dynamic-product-desc' %}
+      {%- endif -%}
+      {% comment %} END {% endcomment %}
     </div>
-
+	
     <div class="grid__item {{ product_description_width }}">
       <div class="product-single__meta">
 
@@ -141,24 +180,17 @@
 
           {% form 'product', product, class:form_classes, novalidate: 'novalidate' %}
             {% unless product.has_only_default_variant %}
-              {% for option in product.options_with_values %}
-                <div class="selector-wrapper js product-form__item">
-                  <label {% if option.name == 'default' %}class="label--hidden" {% endif %}for="SingleOptionSelector-{{ forloop.index0 }}">
-                    {{ option.name }}
-                  </label>
-                  <select class="single-option-selector single-option-selector-{{ section.id }} product-form__input" id="SingleOptionSelector-{{ forloop.index0 }}" data-index="option{{ forloop.index }}">
-                    {% for value in option.values %}
-                      <option value="{{ value | escape }}"{% if option.selected_value == value %} selected="selected"{% endif %}>{{ value }}</option>
-                    {% endfor %}
-                  </select>
-                </div>
-              {% endfor %}
+        		{%- if product_template == 'personalized-pairs' -%}
+        			{% include 'variant-options-pairs' %}
+        		{%- else -%}
+        			{% include 'variant-options-default' %}
+        		{%- endif -%}
             {% endunless %}
-
+			
             <select name="id" id="ProductSelect-{{ section.id }}" class="product-form__variants no-js">
               {% for variant in product.variants %}
                 {% if variant.available %}
-                  <option {% if variant == product.selected_or_first_available_variant %} selected="selected" {% endif %} value="{{ variant.id }}">
+                  <option value="{{ variant.id }}">
                     {{ variant.title }}
                   </option>
                 {% else %}
@@ -173,6 +205,13 @@
                 <input type="number" id="Quantity-{{ section.id }}" name="quantity" value="1" min="1" class="product-form__input" pattern="[0-9]*">
               </div>
             {% endif %}
+        
+        	{%- comment -%} START {%- endcomment -%}
+        	{%- if form_snippet -%}
+        		{% include form_snippet %}
+        	{%- endif -%}
+        	{%- comment -%} END {%- endcomment -%}
+        	
             <div class="product-form__item product-form__item--submit{% if section.settings.enable_payment_button %} product-form__item--payment-button{% endif %}{% if product.has_only_default_variant %} product-form__item--no-variants{% endif %}">
               <button type="submit" name="add" id="AddToCart-{{ section.id }}" {% unless current_variant.available %}disabled="disabled"{% endunless %} class="btn product-form__cart-submit{% if section.settings.enable_payment_button %} btn--secondary-accent{% endif %}">
                 <span id="AddToCartText-{{ section.id }}">
@@ -197,11 +236,13 @@
           aria-live="polite"
           role="status"
         ></p>
-
-        <div class="product-single__description rte">
-          {{ product.description }}
-        </div>
-
+      
+		{% comment %} START: display description as per standard {% endcomment %}
+        {%- if display_left == false -%}
+          {% include 'dynamic-product-desc' %}
+        {%- endif -%}
+        {% comment %} END {% endcomment %}
+      	
         {% if section.settings.show_share_buttons %}
           {% include 'social-sharing', share_title: product.title, share_permalink: product.url, share_image: product %}
         {% endif %}
@@ -223,8 +264,6 @@
     {{ product | json }}
   </script>
 {% endunless %}
-
-
 
 {% schema %}
 {
@@ -398,3 +437,18 @@
   ]
 }
 {% endschema %}
+<script>
+	var productOptions = [];
+  	{%- for option in product.options -%}
+  		var optionObj = {};
+  		optionObj[ {{ forloop.index0 }} ] = "{{ product.options[forloop.index0] }}";
+  		productOptions.push(optionObj);
+  	{%- endfor -%}
+</script>
+{%- if product_template == blank -%}
+	<script src="{{ 'product-template.js' | asset_url }}"></script>
+{%- endif -%}
+
+{%- if product_template == 'nobuy' -%}
+	<script>$('#AddToCart-product-template').attr('disabled', 'disabled');</script>
+{%- endif -%}
